<resources>
    <string name="app_name">Trac</string>
    <string name="launcher_message">Your safety is our priority…</string>
    <string name="get_started">Get Started</string>
    <string name="tutorial_title_one">Be Connected, Be Smart</string>
    <string name="tutorial_title_two">Security Awareness</string>
    <string name="tutorial_description_one">Join a community dedicated to keeping each other safe</string>
    <string name="tutorial_description_two">Send notifications to your loved ones if you feel like you are in danger</string>
    <string name="register_title">Let\'s get some basic info</string>
    <string name="register_description">This brings people together, closer to each other.</string>
    <string name="info">This should take about 5–10 minutes.</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone (Exactly 10 digits)</string>
    <string name="name_hint">Name (Min 2 Characters)</string>
    <string name="otp_hint">OTP</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="resend">Resend OTP</string>
    <string name="bluetooth_pairing">Bluetooth Pairing</string>
    <string name="bluetooth_description">THREE THINGS AND WE ARE DONE!</string>
    <string name="bluetooth_title">First, we need access to Bluetooth</string>
    <string name="bluetooth_info">By using Bluetooth as a background process it\'s possible to trace down your location in the event of any emergency.</string>
    <string name="bluetooth_button_text">Grant Access to Bluetooth</string>
    <string name="existing_text"><u>Existing User? Sign in</u></string>
    <string name="more_text">More</string>
    <string name="contacts_text">Contacts</string>
    <string name="map_text">Maps</string>
    <string name="home_text">Home</string>
    <string name="contacts_description">We can help best during critical moments if you have someone to reach out to.  Go ahead and tap the (+) button above to add someone.</string>
    <string name="contacts_title">Your Emergency Contacts</string>
    <string name="no_emergency_contacts">You don\'t have any emergency contacts saved. Go to add contacts to select up to 3 contacts to be notified your location in case of emergency.</string>
    <string name="message_title">Your Emergency Message</string>
    <string name="save">Save</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="emergency_text_title">Your Emergency Message</string>
    <string name="select_contact_info">This person should be the one who is more reliable and knows you well</string>
    <string name="manually_add_contact">Manually Add Contact</string>
    <string name="timer_display">If you feel you are safe, you have %s seconds to cancel this alarm</string>
    <string name="cancel">Cancel</string>
    <string name="home_info_text">Long press on the sos in any case of emergency.\n\nWe will let your loved ones know that you need help. We will send them your coordinates and your information.</string>
    <string name="sos">SOS</string>
    <string name="login">Login</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="general">General</string>
    <string name="add_ons">Add-Ons</string>
    <string name="faq">FAQ\'s</string>
    <string name="unlink">Unlink</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="bluetooth_device">Bluetooth Device Data</string>
    <string name="logout">Logout</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="report">Report a bug</string>
</resources>
