<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_text"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/maps"
            android:enabled="true"
            android:icon="@drawable/ic_map"
            android:title="@string/map_text"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/contacts"
            android:enabled="true"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts_text"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/more"
            android:enabled="true"
            android:icon="@drawable/ic_more"
            android:title="@string/more_text"
            app:showAsAction="ifRoom" />

</menu>