<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_gradient"
            android:orientation="vertical">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:text="@string/bluetooth_pairing"
                android:textColor="@color/blue"
                android:textSize="26sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:padding="20dp"
                android:text="@string/bluetooth_description"
                android:textColor="@color/white" />

        <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_description"
                android:padding="20dp"
                android:text="@string/bluetooth_title"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/text_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_title"
                android:padding="20dp"
                android:text="@string/bluetooth_info"
                android:textColor="@color/white" />

        <ImageView
                android:id="@+id/image_view"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_below="@id/text_info"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_shield" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/grant_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/bluetooth_button_text" />

        <TextView
                android:id="@+id/existing_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/title"
                android:padding="10dp"
                android:text="@string/existing_text"
                android:textColor="@color/white" />

    </RelativeLayout>

</layout>