<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/flic_card"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:text="@string/register_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otp_view"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/otp_hint"
                app:boxStrokeColor="@color/light_grey"
                app:counterTextAppearance="@color/light_grey"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_message">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/otp_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                tools:text="OTP Valid for - 76" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                style="@style/ButtonDisableStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/submit"
                app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/resend"
                app:cornerRadius="20dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:text="@string/register_description"
                android:textSize="14sp" />

    </LinearLayout>

</layout>