<?xml version="1.0" encoding="utf-8"?><!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto">-->

<!--    <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/save" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/done"
            android:layout_marginTop="20dp">

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/add_emergency_contact" />

        <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/select_contact_info" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/add_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/manually_add_contact"
                app:cornerRadius="20dp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_contact"
                android:layout_marginTop="30dp" />

    </RelativeLayout>
</RelativeLayout><!--    </ScrollView>-->
        <!--</layout>-->