<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/grey_gradient"
            android:gravity="center"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/name_hint"
                android:focusableInTouchMode="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/phone_hint"
                app:counterEnabled="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/email_hint"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/register"
                app:cornerRadius="20dp" />


    </LinearLayout>

</layout>